Single node OCP deployment on openstack
Signed-off-by: sunilkumarn417 <sunnagar@redhat.com>

--- a/claim.yaml
+++ b/claim.yaml
@@ -2,7 +2,7 @@
 apiVersion: hive.openshift.io/v1
 kind: ClusterClaim
 metadata:
-  name: sno-cluster
+  name: ceph-rhosd-01
   namespace: ceph
 spec:
-  clusterPoolName: ceph-rhos01hub-pool
+  clusterPoolName: ceph-rhosd-pool
