--- a/env.yaml.template
+++ b/env.yaml.template
@@ -1,11 +1,55 @@
+# ===============
+#    IMPORTANT
+# ===============
 # All portal configuration would situate here.
+# QE_HIVE kubeconfig is necessary, add it under kubeconfig --> qe-hive.
+# Openstack credentials needs to be added here
+# AWS credentials needs to be added here.
+# Copy this template file as env.yaml under rhcs-system-test directory, this would be
+#   used by python modules to access QE-HIVE...
 
-#qe-hive:
-#    kubeconfig: ####
+# ----------- AWS -----------
+# currently Not needed
+# ---------------------------
+aws:
+    access-key: <ACCESS-key>
+    secret-key: <SECRET-key>
 
-#openstack:
-#    key1: value
 
-#aws:
-#    secret-key: <secret-key>
-#    access-key: <access-key>
+# ------------------------------ KUBCONFIG -------------------------------
+# Very much needed
+# ------------------------------------------------------------------------
+kubeconfig:
+    qe-hive:
+        apiVersion: v1
+        clusters:
+        -   cluster:
+                certificate-authority-data: example---abcdefghi==
+                server: https://x.x.x.x:6443
+            name: example.local
+        contexts:
+        -   context:
+                cluster: example.local
+                namespace: ceph-example
+                user: ceph-example
+            name: ceph@example.local
+        current-context: local@example.local
+        kind: Config
+        users:
+        -   name: ceph-example
+            user:
+                token: token-id-abcdef12345
+
+# --------------- OPENSTACK -------------------------
+# currently Not needed
+# ---------------------------------------------------
+openstack:
+    auth_url: https://rhos-d.server.example.com:13000
+    identity_api_version: <API-VERSION>
+    interface: <INTERFACE>
+    password: <PASSWORD>
+    project_id: <PROJECT-ID>
+    project_name: <PROJECT_NAME>
+    region_name: <REGION>
+    user_domain_name: <DOMAIN NAME>
+    username: <USERNAME>
