Adding utitlity function to get the latest build details
Signed-off-by: Amarnath K <amk@amk.remote.csb>

--- a/env.yaml.template
+++ b/env.yaml.template
@@ -53,3 +53,9 @@ openstack:
     region_name: <REGION>
     user_domain_name: <DOMAIN NAME>
     username: <USERNAME>
+#----------------Builds Required------------------------
+oc_builds:
+    ocp_version: 4.11.0
+    os_type: <OS_TYPE>
+    build_type: <BUILD_TYPE>
+
